--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    <div class="container">
 
     <nav>
-        <div class="logo"><img src="./Assets/Logo.png" alt="logo">
+        <div class="logo"><img src="Logo.png" alt="logo">
         </div>
         <div class="grow-list">
             <ul class="list">
@@ -46,7 +46,7 @@
         </div>
         <!-- Right hero section -->
         <div class="rightmain">
-            <img src="./Assets/Header Illustration.png" alt="headimg" class="headimg">
+            <img src="Header Illustration.png" alt="headimg" class="headimg">
         </div>
 
     </main>
